# f1-simulator

./: .gitignore  FEATURE_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quick_simulation.py  simulate_race.py
frontend/: index.html
output/: 2024_bahrain_grand_prix_qualifying_results.csv  2024_bahrain_grand_prix_race_results.csv  2024_bahrain_grand_prix_statistics.json  monza_quick_qualifying_results.csv  monza_quick_race_results.csv  monza_quick_statistics.json
src/f1sim/: __init__.py
src/f1sim/analysis/: __init__.py  montecarlo.py  scenarios.py
src/f1sim/data/: __init__.py  historical.py
src/f1sim/models/: __init__.py  car.py  driver.py  tire.py  track.py  weather.py
src/f1sim/output/: __init__.py  console.py  export.py
src/f1sim/simulation/: __init__.py  events.py  lap.py  overtaking.py  qualifying.py  race.py
src/f1sim/web/: __init__.py  __main__.py  dashboard.py  server.py
tests/: test_dashboard_summary.py  test_event_realism.py  test_export_metadata.py  test_montecarlo_basics.py  test_pit_strategy.py  test_report_export.py  test_run_history.py  test_scenarios.py  test_server_summary.py  test_simulation_results.py  test_strategy_archetypes.py  test_tire_crossover.py
