[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1sim"
version = "0.1.0"
description = "Monte Carlo simulation for Formula 1 races"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/f1sim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
